# cli-parris

./: .gitignore  LICENSE  README.md  REQUIREMENTS.md  SPEC.md  layout_demo.py  parry_demo.py  pyproject.toml  ui_mockup.py
cli_parris/: __init__.py  __main__.py  game.py  sound.py
docs/: index.html
