[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nononono2"
version = "0.2.0"
description = "Nononono2 - 灰都殺伐代行 - Terminal 2-Lane Parry Action Game"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "seiya makino" },
]
keywords = ["game", "terminal", "roguelike", "tui", "curses", "parry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]

[project.scripts]
nononono2 = "cli_parris.game:entry_point"

[project.urls]
Homepage = "https://github.com/astra-bc/cli-parris"
Issues = "https://github.com/astra-bc/cli-parris/issues"
